--- a/frontend/src/styles/AuthStyles.css
+++ b/frontend/src/styles/AuthStyles.css
@@ -21,7 +21,7 @@
   text-align: center;
   margin-bottom: 15px;
   font-weight: bold;
-  font-family: "Playfair Display", serif;
+  /* Typography inherited from global h3/heading styles */
 }
 
 .form-container form input {
