--- a/frontend/src/styles/Homepage.css
+++ b/frontend/src/styles/Homepage.css
@@ -4,7 +4,7 @@
 
 .home-page h1 {
   color: gray;
-  font-family: "Playfair Display", serif;
+  /* Typography inherited from global styles */
 }
 
 .home-page {
@@ -52,6 +52,7 @@
   margin-top: 100px;
   color: gray !important;
   border-bottom: 1px solid rgba(128, 128, 128, 0.337);
+  /* Typography inherited from global h4 styles */
 }
 
 .ant-checkbox-wrapper:first-of-type {
